<resources>
    <string name="app_name">Мой колледж</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refresh">Обновить</string>
    <string name="news">Новости</string>
    <string name="schedule">Расписание занятий </string>
    <string name="btschedule">Расписание звонков</string>
    <string name="subs">Замены</string>
    <string name="chat">Чат</string>
    <string name="notifications">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="photos">Фотографии</string>
    <string name="searchsubs">Искать</string>
    <string name="choosedate">Выберите дату</string>
    <string name="cancelbtn">Отмена</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
