<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule"/>
        <item
            android:id="@+id/nav_subs"
            android:icon="@drawable/ic_schedule"
            android:title="@string/subs"/>
        <item
            android:id="@+id/nav_btschedule"
            android:icon="@drawable/ic_btschedule"
            android:title="@string/btschedule"/>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"/>
    </group>


</menu>
